--- a/vlibs/virtwoo-auth/pages/virtwoo-phone-sms/virtwoo-phone-sms.component.html
+++ b/vlibs/virtwoo-auth/pages/virtwoo-phone-sms/virtwoo-phone-sms.component.html
@@ -1,7 +1,7 @@
 <sl-base-page class="auth">
   <div class="ion-activatable ion-activatable-up ripple-toolbar" slot="start">
     <ion-icon
-    class="icono-arrow center"
+    class="icon-arrow center"
     (click)="Back()"
     src="/assets/icon/back.svg"
     ></ion-icon>
