--- a/src/app/pages/private-profiles/private-profiles.page.html
+++ b/src/app/pages/private-profiles/private-profiles.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mis" slot="start" >
       <ion-icon
-      class="icono-arrow center"
+      class="icon-arrow center"
       (click)="Back()"
       src="/assets/icon/back.svg"
       ></ion-icon>
@@ -14,7 +14,7 @@
     <div *ngIf="!load && !Empty" class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mie" slot="end" >
       <fa-icon
         [icon]="['far', 'save']"
-        class="icono-arrow primary center"
+        class="icon-arrow primary center"
         (click)="Confirm()"
       ></fa-icon>
       <ion-ripple-effect></ion-ripple-effect>
@@ -25,7 +25,7 @@
 
 <ion-content class="ion-padding">
   <div *ngIf="load">
-    <div class="contenedorAvatar" >
+    <div class="avatar-container" >
       <ion-avatar class="avatar-profile">
         <ion-skeleton-text animated></ion-skeleton-text>
       </ion-avatar>
@@ -83,7 +83,7 @@
 
   </div>
   <div *ngIf="!load">
-    <div class="contenedorAvatar" >
+    <div class="avatar-container" >
       <ion-avatar class="avatar-profile">
         <img
         (ionError)="ErrorImagen()"
@@ -106,7 +106,7 @@
         [item]="item.item">
       </item-list>
     </ion-list>
-    <div *ngIf="Empty" class="vacio">
+    <div *ngIf="Empty" class="empty">
       <p >
         {{ noItems | translate}}
       </p>
