--- a/src/app/pages/public-profile/public-profile.page.html
+++ b/src/app/pages/public-profile/public-profile.page.html
@@ -4,13 +4,13 @@
       <ion-toolbar class="transparent">
         <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mis" slot="start">
           <ion-icon
-          class="icono-white center"
+          class="icon-white center"
             (click)="Back()"
           src="/assets/icon/back.svg"
           ></ion-icon>
           <!-- <fa-icon
             [icon]="['fas', 'arrow-left']"
-            class="icono-white center"
+            class="icon-white center"
             (click)="Back()"
           ></fa-icon> -->
           <ion-ripple-effect></ion-ripple-effect>
@@ -21,14 +21,14 @@
             {{ (userWink && userWink.status ? userWink.status : 'WINK.STATUS.AVAILABLE') | translate}}
           </ion-label>
           <div class="ion-activatable ion-activatable-up ripple-toolbar ripple-toolbar-mis" slot="start" *ngIf="wink && wink.approved">
-            <ion-icon name="more" class="icono-white center" (click)="ShowMenu($event)"></ion-icon>
+            <ion-icon name="more" class="icon-white center" (click)="ShowMenu($event)"></ion-icon>
             <ion-ripple-effect></ion-ripple-effect>
           </div>
         </div>
       </ion-toolbar>
     </ion-header>
   </ion-fab>
-  <div class="contenedor-card total" *ngIf="load">
+  <div class="card-container total" *ngIf="load">
     <ion-skeleton-text animated class="public-img-skeleton img-avatar"></ion-skeleton-text>
     <div class="text-bottom skeleton-content-text">
         <ion-skeleton-text animated class="skeleton-name-public"></ion-skeleton-text>
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <div class="contenedor-card total" *ngIf="!load">
+  <div class="card-container total" *ngIf="!load">
     <img
       class="public-img img-avatar"
       (ionError)="ErrorImagen()"
@@ -102,7 +102,7 @@
           <ion-fab-button *ngIf="Sended() && !wink.approved" (click)="CancelWink()" size="small" color="primary">
               <fa-icon
               [icon]="['far', 'smile-wink']"
-              class="icono-public"
+              class="icon-public"
               ></fa-icon>
           </ion-fab-button>
       </div>
@@ -112,7 +112,7 @@
       <ion-fab-button *ngIf="!wink" (click)="SendWink()"  size="small" color="light"[disabled]="userWink.status === 'WINK.STATUS.BUSY'">
           <fa-icon
           [icon]="['far', 'smile-wink']"
-          class="icono-public"
+          class="icon-public"
           ></fa-icon>
       </ion-fab-button>
     </ion-fab>
