--- a/src/global.scss
+++ b/src/global.scss
@@ -29,7 +29,7 @@
 @import 'ngx-tour-ngx-popper/styles.css';
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
 
-.icono {
+.icon {
   // margin-inline-end: 0px !important;
   // align-self:flex-start;
   // min-width: 2rem;
@@ -56,7 +56,7 @@
   color: var(--ion-color-primary);
 }
 
-.icono-white {
+.icon-white {
   margin-inline-end: 0px !important;
   color: #fff;
   font-size: 2.25rem;
@@ -64,7 +64,7 @@
   width: 2.25rem;
 }
 
-.icono-arrow {
+.icon-arrow {
   color: var(--ion-color-medium, #989aa2) !important;
   font-size: 2.25rem;
   height: 2.25rem;
@@ -75,7 +75,7 @@
   color:  #7d7e80 !important;
 }
 
-.icono-public {
+.icon-public {
   font-size: 1.5rem;
   color: #fff;
 }
@@ -111,14 +111,14 @@
   justify-content: center;
 }
 
-.contenedorAvatar {
+.avatar-container {
   justify-content: center;
   display: flex;
   padding-top: 2%;
 
 }
 
-.contenedor-card{
+.card-container {
   position: relative;
   display: block;
   text-align: center;
@@ -131,7 +131,7 @@
   margin: 0%;
 }
 
-.sombra {
+.shadow {
   text-shadow: 0.1rem 0.1rem 0.15rem #000;
 }
 
@@ -166,7 +166,7 @@
   font-style: oblique;
 }
 
-.imagen-full {
+.image-full {
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -232,7 +232,7 @@
 }
 
 
-.vacio {
+.empty {
   align-self: center;
   justify-self: center;
   text-align: center;
@@ -426,7 +426,7 @@
   --inner-border-width: 0px !important;
   --border-width: 0px !important;
 }
-.contenedor-doble {
+.double-container {
   display: flex;
   flex-direction: column;
   width:  100%;
