--- a/vlibs/virtwoo-auth/pages/virtwoo-register/virtwoo-register.component.html
+++ b/vlibs/virtwoo-auth/pages/virtwoo-register/virtwoo-register.component.html
@@ -1,13 +1,13 @@
 <sl-base-page class="auth">
   <div class="ion-activatable ion-activatable-up ripple-toolbar" slot="start">
     <ion-icon
-      class="icono-arrow center"
+      class="icon-arrow center"
         (click)="Back()"
       src="/assets/icon/back.svg"
       ></ion-icon>
       <!-- <fa-icon
       [icon]="['fas', 'arrow-left']"
-      class="icono-arrow"
+      class="icon-arrow"
       (click)="Back()"
     ></fa-icon> -->
       <ion-ripple-effect></ion-ripple-effect>
