correciones de estilos iconos items

--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
@@ -14,7 +14,7 @@ class="wrapper design-style"
       *ngIf="itemType"
       [icon]="itemType? [preIcon, icon] : null"
       (click)="ShowSelector()"
-      class="icono"
+      class="icon"
       slot="start" ></fa-icon>
     </div>
 
