--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -106,7 +106,7 @@
           <div class="center icon-column">
             <fa-icon
             [icon]="['fas', 'book-open'] "
-          class="icono"></fa-icon>
+          class="icon"></fa-icon>
           </div>
           <ion-textarea rows="1"   autoGrow="true"
           class="delete-column textarea-bio medium"
@@ -159,7 +159,7 @@
                 </app-item-perfil>
             </div>
             <div *ngIf="publicoForm.length === 0" class="empty">
-              <fa-icon [icon]="['fas', 'exclamation-circle']" class="icono"></fa-icon>
+              <fa-icon [icon]="['fas', 'exclamation-circle']" class="icon"></fa-icon>
             </div>
           </mat-expansion-panel>
           <div *ngIf="tour" tourAnchor="public"></div>
@@ -198,7 +198,7 @@
                 </app-item-perfil>
               </div>
               <div *ngIf="generalForm.length === 0" class="empty">
-                <fa-icon [icon]="['fas', 'exclamation-circle']" class="icono"></fa-icon>
+                <fa-icon [icon]="['fas', 'exclamation-circle']" class="icon"></fa-icon>
               </div>
           </mat-expansion-panel>
 
@@ -236,7 +236,7 @@
               </app-item-perfil>
             </div>
             <div *ngIf="personalForm.length === 0" class="empty">
-              <fa-icon [icon]="['fas', 'exclamation-circle']" class="icono"></fa-icon>
+              <fa-icon [icon]="['fas', 'exclamation-circle']" class="icon"></fa-icon>
             </div>
           </mat-expansion-panel>
 
@@ -274,7 +274,7 @@
               </app-item-perfil>
             </div>
             <div *ngIf="profesionalForm.controls.length === 0" class="empty">
-              <fa-icon [icon]="['fas', 'exclamation-circle']" class="icono"></fa-icon>
+              <fa-icon [icon]="['fas', 'exclamation-circle']" class="icon"></fa-icon>
             </div>
           </mat-expansion-panel>
         </mat-accordion>
