--- a/src/app/shared/components/item-list/item-list.component.html
+++ b/src/app/shared/components/item-list/item-list.component.html
@@ -6,7 +6,7 @@
     <fa-icon
     *ngIf="item"
     [icon]="[preIcono, icon]"
-    class="icono"></fa-icon>
+    class="icon"></fa-icon>
   </div>
   <ion-label class="label-item" >
     <div>
