--- a/src/global.scss
+++ b/src/global.scss
@@ -429,8 +429,10 @@
 .double-container {
   display: flex;
   flex-direction: column;
-  width:  100%;
-  height: 100%;
+}
+.row-container {
+  display: flex;
+  flex-direction: row;
 }
 .action-sheet-group-cancel {
   & button {
@@ -507,4 +509,8 @@
   --border-radius: 50%;
   width: 1.5rem !important;
   height: 1.5rem !important;
+}
+
+.tour-arrow-center-right {
+  top: calc(50% - 5px) !important;
 }
