--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -299,10 +299,10 @@
     </div>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed"  *ngIf="!isDrag" >
       <div *ngIf="tour" tourAnchor="add"></div>
-      <div class="row-container" *ngIf="!loading">
+      <div *ngIf="!loading">
         <ion-fab-button *ngIf="FormValid()" size="small" class="button-cancel" (click)="Cancel()">
-          <ion-icon name="close"></ion-icon>
         </ion-fab-button>
+        <ion-icon name="close"></ion-icon>
         <ion-fab-button *ngIf="FormValid()" size="small" color="primary" (click)="onSubmit()">
           <ion-icon name="save"></ion-icon>
         </ion-fab-button>
