--- a/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
+++ b/src/app/pages/profile-settings/item-perfil/item-perfil.component.html
@@ -52,7 +52,7 @@ class="wrapper design-style"
     <!--Selector para item de seleccion-->
     <ion-select
     *ngIf="itemType && itemType.index === 4"
-    class="date-item input-relative delete-column  medium"
+    class="date-item input-relative delete-column  medium center-vertical-text div-dateTime "
     interface="popover"
     [placeholder]="'WINK.PROFILE_SETTINGS.OPTIONS.SELECT_ITEMS' | translate"
     (ionChange)="OnInput($event.target.value, 0)"
@@ -69,10 +69,13 @@ class="wrapper design-style"
     <!--Input para fecha-->
     <ion-datetime
     *ngIf="itemType && itemType.index === 5"
-    class="date-item input-relative delete-column  medium"
+    class="date-item input-relative delete-column  medium center-vertical-text div-dateTime "
     displayFormat="DD/MM/YYYY"
     min="1900-01-01"
     [max]="CurrentDate() | date:'yyy-MM-dd'"
+    [placeholder]="Watermark(0) | translate"
+    [doneText]=" 'WINK.BUTTONS.OK' | translate"
+    [cancelText]=" 'WINK.BUTTONS.CANCEL' | translate"
     [value]="Value(0)? (Value(0)) : null "
     (ionChange)="OnInput($event.target.value, 0)"
     formControlName="campo1"
@@ -124,7 +127,7 @@ class="wrapper design-style"
   *ngIf="!itemType"
   ok-text="Aceptar"
   cancel-text="Cancelar"
-  class="select-type input-relative"
+  class="select-type input-relative center-vertical-text div-dateTime "
   [ngClass]="{'select-column' : !order && !value.basic , 'all-column' : value.basic || order}"
   interface="popover"
   [value]="itemType"
