--- a/vlibs/virtwoo-auth/pages/virtwoo-auth-login/virtwoo-auth-login.component.html
+++ b/vlibs/virtwoo-auth/pages/virtwoo-auth-login/virtwoo-auth-login.component.html
@@ -34,8 +34,13 @@
           </div>
         </virtwoo-auth-form>
 
-        <virtwoo-auth-social
+        <!-- <virtwoo-auth-social
           [fields]="['google', 'facebook', 'sms']"
+        >
+        </virtwoo-auth-social> -->
+        
+        <virtwoo-auth-social
+          [fields]="['google']"
         >
         </virtwoo-auth-social>
 
