--- a/vlibs/virtwoo-auth/auth.scss
+++ b/vlibs/virtwoo-auth/auth.scss
@@ -281,6 +281,7 @@ sl-base-page.auth {
       flex: 1;
       display: flex;
       justify-content: space-between;
+      align-items: center;
     }
     img {
       width: 1.5rem;
