--- a/src/app/common/alert/alert.component.html
+++ b/src/app/common/alert/alert.component.html
@@ -11,7 +11,7 @@
   <div class="alert__message"
   *ngIf="isPromptStatus"
   >
-      <ion-radio-group >
+      <ion-radio-group [value]="description" >
 
         <ion-item>
           <ion-label>
@@ -20,20 +20,30 @@
           <ion-radio
             slot="start"
             value="WINK.STATUS.AVAILABLE"
+            (ionFocus)="Blur($event)">
+          </ion-radio>
+          <!-- <ion-radio
+            slot="start"
+            value="WINK.STATUS.AVAILABLE"
             (ionFocus)="Blur($event)"
             [checked]="description && description === 'WINK.STATUS.AVAILABLE'">
-          </ion-radio>
+          </ion-radio> -->
         </ion-item>
 
         <ion-item>
           <ion-label>
             {{'WINK.STATUS.BUSY' | translate}}
           </ion-label>
-          <ion-radio
+          <!-- <ion-radio
             slot="start"
             value="WINK.STATUS.BUSY"
             (ionFocus)="Blur($event)"
             [checked]="description && description === 'WINK.STATUS.BUSY'">
+          </ion-radio> -->
+          <ion-radio
+            slot="start"
+            value="WINK.STATUS.BUSY"
+            (ionFocus)="Blur($event)">
           </ion-radio>
         </ion-item>
 
@@ -44,10 +54,14 @@
             [maxlength]="maxStatus"
             [value]="description && isInput ? description : null">
           </ion-input>
-          <ion-radio
+          <!-- <ion-radio
             slot="start"
             value="input"
             [checked]="!description || focusInput">
+          </ion-radio> -->
+          <ion-radio
+            slot="start"
+            value="input">
           </ion-radio>
         </ion-item>
       </ion-radio-group>
