--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -82,7 +82,7 @@
           class="col-home"
           *ngFor="let item of arrayLoad">
             <ion-card class="card-list card-skeleton">
-              <ion-skeleton-text animated class="margin-0"></ion-skeleton-text>
+              <ion-skeleton-text animated class="margin-0 card-skeleton-text"></ion-skeleton-text>
             </ion-card>
           </ion-col>
         </ion-row>
