--- a/src/app/common/alert/alert.component.html
+++ b/src/app/common/alert/alert.component.html
@@ -11,7 +11,7 @@
   <div class="alert__message"
   *ngIf="isPromptStatus"
   >
-      <ion-radio-group [value]="description" >
+      <ion-radio-group [value]="valueRadio" >
 
         <ion-item>
           <ion-label>
