--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -105,7 +105,7 @@
         </ion-avatar>
       </div>
 
-      <div  class="title-name">
+      <div  class="title-name item-name-text">
         {{user ? user.firstName + ' ' + user.lastName : 'John Doe'}}
       </div>
 
