--- a/src/app/pages/profile-settings/profile-settings.page.scss
+++ b/src/app/pages/profile-settings/profile-settings.page.scss
@@ -3,10 +3,13 @@
   margin-bottom: 0.5rem;
 }
 
-.item-name {
-  width: 90%;
-  margin: 16px 0px;
+:host {
+  .item-name-text {
+    margin: 16px 0px;
+  }
 }
+
+
 .item {
   align-self: center;
 }
